--- a/public/views/errors/face-to-face-error.ejs
+++ b/public/views/errors/face-to-face-error.ejs
@@ -4,6 +4,6 @@
 
         <div>También es posible que el torneo aun no tenga partidos cargados.</div>
 
-        <a href="./face-to-face">Volver</a>
+        <a href="/face-to-face">Volver</a>
     </main>
     <%- include('./../partials/footer')-%>
