--- a/public/views/errors/tournaments-id-error.ejs
+++ b/public/views/errors/tournaments-id-error.ejs
@@ -5,6 +5,6 @@
 
         <div>Volver a <a href="/tournaments">torneos</a></div>
 
-        <a href="./">Volver al home</a>
+        <a href="/">Volver al home</a>
     </main>
     <%- include('./../partials/footer')-%>
