--- a/public/views/upload-games.ejs
+++ b/public/views/upload-games.ejs
@@ -93,7 +93,7 @@
                 </div>
                 <div class="form__container-row">
                     <label>Seleccione el score:</label>
-                    <input id="scoreP1" name='scoreP1' placeholder="Marcador J1" type="text" required>
+                    <input id="scoreP1" name='scoreP1' placeholder="Marcador J1" type="number" min="0" required>
                 </div>
             </div>
 
@@ -128,7 +128,7 @@
                 </div>
                 <div class="form__container-row">
                     <label>Seleccione el score:</label>
-                    <input id="scoreP2" name='scoreP2' placeholder="Marcador J2" type="text" required>
+                    <input id="scoreP2" name='scoreP2' placeholder="Marcador J2" type="number" min="0" required>
                 </div>
             </div>
 
