--- a/public/scss/partials/_upload-games.scss
+++ b/public/scss/partials/_upload-games.scss
@@ -14,7 +14,11 @@
         padding: 1rem;
         width: 75%;
 
-        &:first-child { 
+        select {
+            text-align: center;
+        }
+
+        &:first-child {
 
             .form__container-row {
                 align-items: center;
@@ -22,10 +26,12 @@
                 flex-direction: column;
                 justify-content: center;
                 width: 40%;
+
                 label {
                     margin: 0.5rem 0 0.2rem 0;
                     text-align: center;
                     width: max-content;
+
                     &:first-child {
                         margin-top: 0;
                     }
@@ -40,14 +46,17 @@
             justify-content: center;
             padding: 0.25rem;
             width: 100%;
+
             label {
                 margin: 0.5rem .75rem 0.2rem 0;
-            
+
                 &:first-child {
                     margin-top: 0;
                 }
             }
-            select , input {
+
+            select,
+            input {
                 text-align: center;
             }
         }
