--- a/public/views/errors/upload-games-error.ejs
+++ b/public/views/errors/upload-games-error.ejs
@@ -7,7 +7,7 @@
             <div>¡Intente de nuevo!</div>
             <% } else{ %>
                 <div>No existen torneos en la base de datos.</div>
-                <div>Antes de cargar un partido, debe <a href="./../create-tournament">generar un torneo!</a></div>
+                <div>Antes de cargar un partido, debe <a href="/create-tournament">generar un torneo!</a></div>
                 <% } %>
 
                     <a href="./">Volver</a>
