--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -35,22 +35,22 @@
         <nav class="nav">
             <ul id="nav__list" class="nav__list">
                 <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="./">Inicio</a>
+                    <a class="nav__list-option-link" href="/">Inicio</a>
                 </li>
                 <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="./login">Login</a>
+                    <a class="nav__list-option-link" href="/login">Login</a>
                 </li>
                 <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="./tournaments">Torneos</a>
+                    <a class="nav__list-option-link" href="/tournaments">Torneos</a>
                 </li>
                 <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="./create-tournament">Crear torneo</a>
+                    <a class="nav__list-option-link" href="/create-tournament">Crear torneo</a>
                 </li>
                 <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="./upload-games">Cargar partidos</a>
+                    <a class="nav__list-option-link" href="/upload-games">Cargar partidos</a>
                 </li>
                 <li id="" class="nav__list-option">
-                    <a class="nav__list-option-link" href="./face-to-face">Mano a mano</a>
+                    <a class="nav__list-option-link" href="/face-to-face">Mano a mano</a>
                 </li>
             </ul>
         </nav>
