--- a/public/scss/partials/_main.scss
+++ b/public/scss/partials/_main.scss
@@ -1,9 +1,10 @@
 main {
   padding-top: $headerHeight;
+  width: 100%;
 
   .container__tournament {
     align-items: center;
-    background-color: #fff;
+    background-color: $mainBlue;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -11,6 +12,7 @@ main {
 
     .flex-container {
       align-items: flex-end;
+      border: 0;
       display: flex;
       width: 100%;
 
@@ -27,7 +29,6 @@ main {
         height: $firstHeaderHeight;
         justify-content: space-between;
         margin: auto 0 0 0;
-        // padding: 4rem 0 2rem 0;
         width: 100%;
 
         img {
@@ -54,6 +55,8 @@ main {
     }
 
     .carousel.slide {
+      background-color: $mainBlue;
+      height: 475px;
       width: 100%;
 
       .carousel-control-prev {
@@ -83,169 +86,198 @@ main {
       }
 
       .carousel-inner {
+        height: 100%;
         .carousel-item {
+          height: 100%;
+          position: relative;
           transition: transform 0.6s ease-in-out; // Animation speed at fade-in/out of each slide
 
+          .container__tournament-title {
+            background-color: $mainAquamarine;
+            color: #fff;
+            font-size: 1.25rem;
+            height: fit-content;
+            position: absolute;
+            text-align: center;
+            text-transform: uppercase;
+            top: 4rem;
+            width: 70%;
+            z-index: 500; // Z-index for the nav is 5000.
+          }
+
+          .img-trophy {
+            height: 90px;
+            position: absolute;
+            right: 1rem;
+            top: 2rem;
+            width: 90px;
+            z-index: 500; // Z-index for the nav is 5000.
+          }
+
           .container__tournament-content-stack {
+            background-color: #fff;
             display: flex;
             flex-direction: column;
-            height: auto;
-            margin: 0.75rem 0;
+            height: 100%;
+            margin: 0 auto;
             position: relative;
-            width: 100%;
-
-            .container__tournament-content {
-              border: #000 1.13px solid;
-              position: relative;
-
-              .container__tournament-content-title {
-                background-color: $mainAquamarine;
-                border-bottom: #000 1.13px solid;
-                color: #fff;
-                font-size: 1.25rem;
-                padding: 0.25rem 0;
-                text-align: center;
-                text-transform: uppercase;
-              }
+            width: 92.5%;
 
               .img-gallartie {
                 width: 100%;
               }
 
-              .container__tournament-content-champion,
-              .container__tournament-content-finalist {
+              .container__tournament-content {
                 align-items: center;
+                border: #000 1.13px solid;
                 cursor: pointer;
                 display: flex;
-                flex-direction: row;
+                flex-direction: column;
+                height: 100%;
                 justify-content: space-evenly;
+                position: relative;
                 text-transform: uppercase;
-              }
 
-              .container__tournament-content-champion {
-                background-color: $mainGold;
-                border: $secondaryGold 3.5px solid;
-                margin: 1.5rem auto 0.75rem auto;
-                padding: 0.75rem 0.25rem;
-                width: 85%;
-
-                .img-team {
-                  height: 75px;
-                  width: 60px;
-                }
-
-                .img-country {
-                  height: 60px;
-                  width: 85px;
-                }
-
-                .container__tournament-content-champion-details {
+                .container__tournament-content-plaque {
                   display: flex;
-                  flex-direction: column;
+                  flex-direction: row;
+                  margin: 0 auto;
+                  padding: 0.75rem 0.25rem;
+                  position: relative;
+                  width: 75%;
 
-                  .span-title {
-                    color: #000;
-                    font-size: 0.95rem;
+                  .img-team {
+                    height: 75px;
+                    margin: auto;
+                    width: 60px;
                   }
+                  
+                  .img-country {
+                    height: 60px;
+                    margin: auto 0;
+                    width: 85px;
+                  }
+                  
+                  .container__tournament-content-details {
+                    display: flex;
+                    flex-direction: column;
+                    margin: auto;
+                    text-align: center;
+                  
+                    .span-title {
+                      color: #000;
+                      font-size: 0.95rem;
+                    }
+                  
+                    .span-name {
+                      color: $mainBlue;
+                      font-size: 3rem;
+                      line-height: 2.5rem;
+                    }
+                  
+                    .span-team {
+                      color: #000;
+                      font-size: 1.125rem;
+                    }
+                  }
+                }
 
-                  .span-name {
-                    color: $mainBlue;
-                    font-size: 3rem;
-                    line-height: 2.5rem;
-                  }
-
-                  .span-team {
-                    color: #000;
-                    font-size: 1.125rem;
-                  }
+                .plaque-champion {
+                  background-color: $mainGold;
+                  border: $secondaryGold 3.5px solid;
+                  margin-top: auto;
+                  margin-bottom: 1rem;
+                }
+                
+                .plaque-finalist {
+                  background-color: $mainGray;
+                  border: $secondaryGray 3.5px solid;
+                  margin-top: 1rem;
+                  margin-bottom: 3rem;
+                }
+                .circle {
+                  border-radius: 50%;
+                  height: 6px;
+                  position: absolute;
+                  width: 6px;
+                }
+                
+                .circle-champion {
+                  background-color: $secondaryGold;
+                }
+                
+                .circle-finalist {
+                  background-color: $secondaryGray;
+                }
+                
+                .circle-top-left {
+                  left: 0.25rem;
+                  top: 0.25rem;
+                }
+                
+                .circle-top-right {
+                  right: 0.25rem;
+                  top: 0.25rem;
+                }
+                
+                .circle-bottom-left {
+                  left: 0.25rem;
+                  bottom: 0.25rem;
+                }
+                
+                .circle-bottom-right {
+                  right: 0.25rem;
+                  bottom: 0.25rem;
                 }
               }
-
-              .container__tournament-content-finalist {
-                background-color: $mainGray;
-                border: $secondaryGray 3.5px solid;
-                margin: 0.75rem auto 1.5rem auto;
-                padding: 0.5rem 0;
-                width: fit-content;
-
-                .img-team {
-                  height: 50px;
-                  margin: 0 0.5rem 0 1rem;
-                  width: 45px;
-                }
-
-                .img-team.img-team-atletico-madrid-small {
-                  width: 35px;
-                }
-
-                .img-country {
-                  height: 40px;
-                  margin: 0 0.5rem 0 1rem;
-                  width: 55px;
-                }
-
-                .container__tournament-content-finalist-details {
-                  display: flex;
-                  flex-direction: column;
-                  margin: 0 1rem 0 0.5rem;
-
-                  .span-title {
-                    color: #000;
-                    font-size: 0.6rem;
-                  }
-
-                  .span-name {
-                    color: $mainBlue;
-                    font-size: 1.5rem;
-                    line-height: 1.5rem;
-                  }
-
-                  .span-team {
-                    color: #000;
-                    font-size: 0.75rem;
-                  }
-                }
-              }
-            }
           }
         }
       }
     }
 
     .records {
+      background-color: $thirdGray;
       display: flex;
       flex-direction: column;
-      margin-bottom: 1.5rem;
+      margin: 1.5rem 0;
       width: 100%;
-
-      .records-title {
-        align-items: center;
-        background-color: $mainGold;
-        border: $secondaryGold 3.15px solid;
-        color: $mainBlue;
-        display: flex;
-        font-size: 1.25rem;
-        font-weight: bold;
-        justify-content: flex-start;
-        margin: 0 0 0 auto;
-        padding: 2.5px 0 2.5px 10px;
-        text-transform: uppercase;
-        width: 65%;
-      }
 
       .records-content-container {
         align-items: flex-start;
         display: flex;
         flex-direction: column;
+        padding: 1rem 0 0 0;
 
         .records-content {
           align-items: center;
           display: flex;
-          justify-content: center;
-          margin: 0.75rem;
+          justify-content: flex-start;
+          margin: 0.5rem;
+          width: 100%;
+
+          .gold-star {
+            margin-bottom: 1.5rem;
+          }
+
+          .world-cup-img {
+            width: 45px;
+          }
+
+          &:first-child {
+            margin-top: 0;
+          }
 
           &:last-child {
             margin-bottom: 0;
+          }
+
+          .records-content-left {
+            align-items: center;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            text-align: center;
+            width: 30%;
           }
 
           .records-content-img-escudo {
@@ -260,10 +292,22 @@ main {
           }
         }
       }
+      .container__stats {
+        align-items: center;
+        display: flex;
+        height: 75px;
+        justify-content: center;
+        width: 100%;
+        button {
+          background-color: $mainBlue;
+          color: #fff;
+          padding: 0.25rem 0.75rem;
+          text-transform: uppercase;
+        }
+      }
     }
-
     .stack-rosario-central {
-      margin-top: $spaceBetweenStacks * 2;
+      // margin-top: $spaceBetweenStacks * 2;
 
       &::before {
         @include estadio(url("./../img/rosario-central-estadio.png"));
