--- a/public/views/index.ejs
+++ b/public/views/index.ejs
@@ -23,10 +23,10 @@
                         aria-label="Slide 5"></button>
                 </div>
                 <div class="carousel-inner">
-                    <div class="carousel-item active" data-bs-interval="5000">
+                    <div class="carousel-item active" data-bs-interval="50000000">
                         <div class="container__tournament-title">Torneo Argentino 2016</div>
                         <img src="./../img/cup.png" class="img-trophy">
-                        <div class="container__tournament-content-stack stack-rosario-central">     
+                        <div class="container__tournament-content-stack stack-rosario-central">
                             <div class="container__tournament-content">
                                 <div class="container__tournament-content-plaque plaque-champion">
                                     <img src="./../img/rosario-central-escudo.png" class="img-team" alt="" />
@@ -196,7 +196,7 @@
                         <img src="./../img/cup.png" class="img-trophy">
                         <div class="container__tournament-content-stack stack-racing">
                             <div class="container__tournament-content">
-                                
+
                                 <div class="container__tournament-content-plaque plaque-champion">
                                     <img src="./img/racing-escudo.png" class="img-team" alt="" />
                                     <div class="container__tournament-content-details">
@@ -253,7 +253,7 @@
                         <img src="./../img/cup.png" class="img-trophy">
                         <div class="container__tournament-content-stack stack-river">
                             <div class="container__tournament-content">
-                                
+
                                 <div class="container__tournament-content-plaque plaque-champion">
                                     <img src="./img/river-escudo.png" class="img-team" alt="" />
                                     <div class="container__tournament-content-details">
@@ -384,7 +384,7 @@
                         <img src="./../img/world-cup.png" class="img-trophy">
                         <div class="container__tournament-content-stack stack-portugal">
                             <div class="container__tournament-content">
-                                
+
                                 <div class="container__tournament-content-plaque plaque-champion">
                                     <img src="./img/portugal-bandera.png" class="img-country" alt="" />
                                     <div class="container__tournament-content-details">
@@ -441,7 +441,7 @@
                         <img src="./../img/world-cup.png" class="img-trophy">
                         <div class="container__tournament-content-stack stack-alemania">
                             <div class="container__tournament-content">
-                                
+
                                 <div class="container__tournament-content-plaque plaque-champion">
                                     <img src="./img/alemania-bandera.png" class="img-country" alt="" />
                                     <div class="container__tournament-content-details">
@@ -498,7 +498,7 @@
                         <img src="./../img/world-cup.png" class="img-trophy">
                         <div class="container__tournament-content-stack stack-belgica">
                             <div class="container__tournament-content">
-                                
+
                                 <div class="container__tournament-content-plaque plaque-champion">
                                     <img src="./img/belgica-bandera.png" class="img-country" alt="" />
                                     <div class="container__tournament-content-details">
@@ -613,7 +613,7 @@
                         <img src="./../img/cup.png" class="img-trophy">
                         <div class="container__tournament-content-stack stack-manchester-united">
                             <div class="container__tournament-content">
-                                
+
                                 <div class="container__tournament-content-plaque plaque-champion">
                                     <img src="./img/manchester-united-escudo.png" class="img-team" alt="" />
                                     <div class="container__tournament-content-details">
@@ -673,7 +673,7 @@
                         <img src="./../img/cup.png" class="img-trophy">
                         <div class="container__tournament-content-stack stack-real-madrid">
                             <div class="container__tournament-content">
-                                
+
                                 <div class="container__tournament-content-plaque plaque-champion">
                                     <img src="./img/real-madrid-escudo.png" class="img-team" alt="" />
                                     <div class="container__tournament-content-details">
