--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -50,6 +50,9 @@
                     <a class="nav__list-option-link" href="/upload-games">Cargar partidos</a>
                 </li>
                 <li id="" class="nav__list-option">
+                    <a class="nav__list-option-link" href="/records">Récords</a>
+                </li>
+                <li id="" class="nav__list-option">
                     <a class="nav__list-option-link" href="/face-to-face">Mano a mano</a>
                 </li>
             </ul>
