--- a/public/scss/styles.scss
+++ b/public/scss/styles.scss
@@ -7,7 +7,8 @@
 @import "partials/footer";
 @import "partials/modal";
 @import "partials/main";
-@import "partials/face-to-face";
 @import "partials/create-tournament";
 @import "partials/upload-games";
+@import "partials/face-to-face";
+@import "partials/records";
 @import "partials/api";
