--- a/public/scss/partials/_records.scss
+++ b/public/scss/partials/_records.scss
@@ -48,6 +48,14 @@
             background-color: ivory;
         }
 
+        &:nth-child(9) {
+            background-color: silver;
+        }
+
+        &:nth-child(10) {
+            background-color: tan;
+        }
+
         .title {
             margin: 0.5rem 0;
         }
