--- a/public/views/login.ejs
+++ b/public/views/login.ejs
@@ -8,12 +8,12 @@
                 <form class="form" action="/login" method="post" role="form" autocomplete="off">
 
                     <div class="form-group">
-                        <input id="emailLogin" name='username' placeholder="email" class="form-control" type="text"
+                        <input id="userLogin" name='username' placeholder="Usuario" class="form-control" type="text"
                             required>
                     </div>
 
                     <div class="form-group">
-                        <input id="passwordLogin" name='password' placeholder="password" class="form-control"
+                        <input id="passwordLogin" name='password' placeholder="Contraseña" class="form-control"
                             type="password" required>
                     </div>
 
