--- a/public/views/partials/header.ejs
+++ b/public/views/partials/header.ejs
@@ -26,6 +26,9 @@
         <a href="./">
             <img class="header__img" src="./../img/logo.jpg" alt="" />
         </a>
+        <form action="/logout" method="post">
+            <button class="btn btn-success">LOGOUT</button>
+        </form>
         <button id="hamburger" class="hamburger">
             <svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-list" viewBox="0 0 16 16">
                 <path fill-rule="evenodd"
