--- a/public/scss/partials/_header.scss
+++ b/public/scss/partials/_header.scss
@@ -15,6 +15,22 @@ header {
         width: 145px;
     }
 
+    form {
+        align-items: center;
+        display: flex;
+        justify-content: center;
+        margin: 0 auto 0 2rem;
+
+        .btn {
+            background-color: $mainGold;
+            border: $secondaryGold 2px solid;
+            color: $mainBlue;
+            font-size: 0.875rem;
+            font-weight: 800;
+            padding: 0.25rem 0.75rem;
+        }
+    }
+
     .nav {
         background-color: $mainGold;
         justify-content: center;
